--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,79 @@ form input[type="submit"], button {
     width: 11%;
 }
 
+/* ---- Search ---- */
+
+.searchbox {
+    margin: 0.625em 0.6% 0;
+    position: relative;
+    border: solid 1px #eee3df;
+    background: #fff;
+    border-radius: 4px;
+    width: 28%;
+}
+
+.searchbox label {
+    color: rgba(255,255,255,.8);
+    position: absolute;
+    left: 10px;
+    top: 3px
+}
+
+.searchbox span {
+    color: rgba(255,255,255,.6);
+    position: absolute;
+    right: 10px;
+    top: 3px;
+    cursor: pointer
+}
+
+.searchbox span:hover {
+    color: rgba(255,255,255,.9)
+}
+
+.searchbox input {
+    display: inline-block;
+    color: #3a3a3a;
+    width: 100%;
+    height: 30px;
+    background: transparent;
+    border: 0;
+    padding: 0 25px 0 30px;
+    margin: 0;
+    font-weight: 400;
+}
+
+.searchbox input::-webkit-input-placeholder {
+    color: #eee3df;
+}
+
+.searchbox input::-moz-placeholder {
+    color: #eee3df;
+}
+
+.searchbox input:-moz-placeholder {
+    color: #eee3df;
+}
+
+.searchbox input:-ms-input-placeholder {
+    color: #eee3df;
+}
+
+@media only screen and (max-width: 801px) {
+     .searchbox {
+         margin: 2.625em 0.6% 0 3%;
+         width: 58%;
+     }
+}
+
+
+@media only screen and (max-width: 500px) {
+     .searchbox {
+         margin: auto;
+         width: 95%;
+     }
+}
+
 /* ---- Layout Containers ---- */
 
 .column-wrapper {
