--- a/css/style.css
+++ b/css/style.css
@@ -300,19 +300,19 @@ form input[type="submit"], button {
 }
 
 .searchbox input::-webkit-input-placeholder {
-    color: #eee3df;
+    color: #3a3a3a9c;
 }
 
 .searchbox input::-moz-placeholder {
-    color: #eee3df;
+    color: #3a3a3a9c;
 }
 
 .searchbox input:-moz-placeholder {
-    color: #eee3df;
+    color: #3a3a3a9c;
 }
 
 .searchbox input:-ms-input-placeholder {
-    color: #eee3df;
+    color: #3a3a3a9c;
 }
 
 @media only screen and (max-width: 801px) {
