--- a/css/style.css
+++ b/css/style.css
@@ -253,81 +253,21 @@ form input[type="submit"], button {
 }
 
 .form input[name="total_time"],
-.form input[name="servings_yield"] {
-    width: 11%;
+.form input[name="servings_yield"],
+.form select[name="categories"] {
+    width: 14%;
 }
 
-/* ---- Search ---- */
-
-.searchbox {
+/* ---- Sort Drop Down ---- */
+.selectbox_wrapper {
     margin: 0.625em 0.6% 0;
-    position: relative;
-    border: solid 1px #eee3df;
-    background: #fff;
+}
+.selectbox {
     border-radius: 4px;
-    width: 28%;
+    padding: 2px 25px 2px 5px;
 }
-
-.searchbox label {
-    color: #3a3a3a9c;
-    position: absolute;
-    left: 7px;
-    top: -3px;
-}
-
-.searchbox span {
-    color: rgba(255,255,255,.6);
-    position: absolute;
-    right: 10px;
-    top: 3px;
-    cursor: pointer
-}
-
-.searchbox span:hover {
-    color: rgba(255,255,255,.9)
-}
-
-.searchbox input {
-    display: inline-block;
-    color: #3a3a3a;
-    width: 100%;
-    height: 30px;
-    background: transparent;
-    border: 0;
-    padding: 0 25px 0 30px;
-    margin: 0;
-    font-weight: 400;
-}
-
-.searchbox input::-webkit-input-placeholder {
-    color: #3a3a3a9c;
-}
-
-.searchbox input::-moz-placeholder {
-    color: #3a3a3a9c;
-}
-
-.searchbox input:-moz-placeholder {
-    color: #3a3a3a9c;
-}
-
-.searchbox input:-ms-input-placeholder {
-    color: #3a3a3a9c;
-}
-
-@media only screen and (max-width: 801px) {
-     .searchbox {
-         margin: 2.625em 0.6% 0 3%;
-         width: 58%;
-     }
-}
-
-
-@media only screen and (max-width: 500px) {
-     .searchbox {
-         margin: auto;
-         width: 95%;
-     }
+.recipes .recipe.hidden {
+    display: none;
 }
 
 /* ---- Layout Containers ---- */
@@ -421,6 +361,13 @@ span.tagline,
         width: 50%;
     }
 }
+
+@media only screen and (max-width: 820px) {
+    .selectbox_wrapper {
+        margin: 2.5em 0;
+    }
+}
+
 /* Smaller than 768px */
 
 @media only screen and (max-width: 768px) {}
@@ -559,6 +506,10 @@ span.tagline,
         display: block;
         box-sizing: border-box;
         overflow: none;
+    }
+    
+    .selectbox_wrapper {
+        margin: 1em 0;
     }
 
 }
